--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
    <div class="page-wrapper">
-    <section class="main-content"></section>
+    <section class="main-content">
       <div class="upgrade">  </div>
       <aside class="">
         <div class="logo"> peeepe</div>
@@ -21,6 +21,7 @@
               <li></li>
             </ul>
           </nav>
+        
     <nav class="secondary-nav">
       <h3>playlist</h3>
       <a href="#">crea playlist</a>
@@ -36,8 +37,12 @@
 
 
 
-      </aside>
+
+     </div>
+   </aside>
+ </section>
       </div>
+
 
 
 <footer>
