--- a/index.html
+++ b/index.html
@@ -7,47 +7,85 @@
     <title></title>
   </head>
   <body>
-   <div class="page-wrapper">
-    <section class="main-content">
-      <div class="upgrade">  </div>
-      <aside class="">
-        <div class="logo"> peeepe</div>
-          <nav class="main-nav">
-            <ul class="playlist-list">
-              <a href="#">playlist</a>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-            </ul>
-          </nav>
-        
-    <nav class="secondary-nav">
-      <h3>playlist</h3>
-      <a href="#">crea playlist</a>
-      <li></li>
-      <li></li>
-      <li></li>
-    </nav>
-     <div class="aside-bottom">
-       <a href="#">install app</a>
-       <hr>
-       <h3></h3>
-
-
-
-
-
+     <!-- page wrapper -->
+     <div class="page-wrapper">
+       <!-- main -->
+       <main>
+         <!-- sidebar -->
+         <aside>
+           <!-- logo -->
+           <div class="logo">
+             <img class="img-logo" src="img/logo.svg" alt="">
+           </div>
+           <!-- /logo -->
+           <!-- main nav -->
+           <nav class="main-nav">
+             <ul>
+               <li><img class="home" src="img/home.svg" alt=""><a class="link">Home</a></li>
+               <li><img class="home" src="img/search.svg" alt=""><a class="link">Cerca</a></li>
+               <li><img class="home" src="img/libreria.svg" alt=""><a class="link">La tua libreria</a></li>
+             </ul>
+           </nav>
+           <!-- /main nav -->
+           <!-- seconday nav playlist -->
+           <nav class="secondary-nav">
+             <div class="playlist-title">
+               <h3>Playlist</h3>
+               <a href="#">CREA PLAYLIST</a>
+             </div>
+             <ul class="playlist-list">
+               <li><a href="#">Link playlist</a></li>
+               <li><a href="#">Link playlist</a></li>
+               <li><a href="#">Link playlist</a></li>
+               <li><a href="#">Link playlist</a></li>
+               <li><a href="#">Link playlist</a></li>
+               <li><a href="#">Link playlist</a></li>
+               <li><a href="#">Link playlist</a></li>
+               <li><a href="#">Link playlist</a></li>
+               <li><a href="#">Link playlist</a></li>
+               <li><a href="#">Link playlist</a></li>
+               <li><a href="#">Link playlist</a></li>
+               <li><a href="#">Link playlist</a></li>
+               <li><a href="#">Link playlist</a></li>
+               <li><a href="#">Link playlist</a></li>
+               <li><a href="#">ULTIMO</a></li>
+             </ul>
+           </nav>
+           <!-- /seconday nav playlist -->
+           <!-- aside bottom -->
+           <div class="aside-bottom">
+             <a href="#">Install app</a>
+             <hr>
+             <h3>Jhon Doe</h3>
+           </div>
+           <!-- /aside bottom -->
+         </aside>
+         <!-- sidebar -->
+         <!-- main content -->
+         <section class="main-content">
+           <div class="upgrade">
+             <a href="#" class="btn">effettua l'upgrade</a>
+           </div>
+             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+           </p>
+         </section>
+         <!-- /main content -->
+       </main>
+       <!-- /main -->
+       <!-- footer -->
+       <footer></footer>
+       <!-- /footer -->
      </div>
-   </aside>
- </section>
-      </div>
-
-
-
-<footer>
-
-</footer>
-
-  </body>
-</html>
+     <!-- /page wrapper -->
+   </body>
+ </html>
